1.17.x support, Java 16, 2021.3 bump (#1588)
* Initial, needs work, currently workaround in launch configuration to even run

* Some more changes

* Updated wrappers

* Some more j16 changes, 1.15.2 does not work!

* Full MCR J16 support (but not in generators yet)

* 1.15.2 bye bye

* Fixed addon generator to work with 1.17.x

* Externalization fix

* Implement auto Crowdin updates (#1569)

* Create crowdin.yml workflow

* Delete crowdin.yml

* Update crowdin.yml

* Create crowdin_download.yml

* Rename crowdin.yml to crowdin_upload.yml

* Fixes

* Some fixes, bump to 2021.3, fg 1.17.1 initial and more (this will not build for sure)

* Revert "Parameter for generators to define their JDK version (#1454)" (sort of fix #1570 - this feature will not work as we planned)

This reverts commit c80dce86

* New Crowdin updates (#1574)

* New translations texts.properties (French)
[skip ci]

* New translations texts.properties (Russian)
[skip ci]

* New translations texts.properties (Portuguese, Brazilian)
[skip ci]

* New translations texts.properties (Vietnamese)
[skip ci]

* New translations texts.properties (Chinese Traditional)
[skip ci]

* New translations texts.properties (Chinese Simplified)
[skip ci]

* New translations texts.properties (Czech)
[skip ci]

* New translations texts.properties (Japanese)
[skip ci]

* New translations texts.properties (German)
[skip ci]

* Attempt 1 (#1571)

* New translations texts.properties (Chinese Simplified) (#1577)

[skip ci]

* Attempt to fix #1572

* New translations texts.properties (Chinese Simplified) (#1579)

[skip ci]

* New translations texts.properties (Japanese) (#1582)

[skip ci]

* Fixed some issues with the wood pack maker (#1580)

* Fix bug with dimensions not appearing on lists

* Removed numeric shortcuts

* Added tick rate to fluids (#1587)

* Base compiles for 1.17.1

* Gradle console compat with 1.17.x

* Fix crowdin
