@@ -72,7 +72,6 @@ dependencies {
     implementation group: 'com.univocity', name: 'univocity-parsers', version: '2.9.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
-    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
     implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.11.0.202103091610-r'
     implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
     implementation group: 'org.gradle', name: 'gradle-tooling-api', version: '7.1.1'
@@ -87,30 +86,30 @@ dependencies {
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
 
     // JFX natives
-    win64 group: 'org.openjfx', name: 'javafx-base', version: '15', classifier: 'win'
-    win64 group: 'org.openjfx', name: 'javafx-controls', version: '15', classifier: 'win'
-    win64 group: 'org.openjfx', name: 'javafx-graphics', version: '15', classifier: 'win'
-    win64 group: 'org.openjfx', name: 'javafx-media', version: '15', classifier: 'win'
-    win64 group: 'org.openjfx', name: 'javafx-web', version: '15', classifier: 'win'
-    win64 group: 'org.openjfx', name: 'javafx-swing', version: '15', classifier: 'win'
+    win64 group: 'org.openjfx', name: 'javafx-base', version: '16', classifier: 'win'
+    win64 group: 'org.openjfx', name: 'javafx-controls', version: '16', classifier: 'win'
+    win64 group: 'org.openjfx', name: 'javafx-graphics', version: '16', classifier: 'win'
+    win64 group: 'org.openjfx', name: 'javafx-media', version: '16', classifier: 'win'
+    win64 group: 'org.openjfx', name: 'javafx-web', version: '16', classifier: 'win'
+    win64 group: 'org.openjfx', name: 'javafx-swing', version: '16', classifier: 'win'
 
-    mac64 group: 'org.openjfx', name: 'javafx-base', version: '15', classifier: 'mac'
-    mac64 group: 'org.openjfx', name: 'javafx-controls', version: '15', classifier: 'mac'
-    mac64 group: 'org.openjfx', name: 'javafx-graphics', version: '15', classifier: 'mac'
-    mac64 group: 'org.openjfx', name: 'javafx-media', version: '15', classifier: 'mac'
-    mac64 group: 'org.openjfx', name: 'javafx-web', version: '15', classifier: 'mac'
-    mac64 group: 'org.openjfx', name: 'javafx-swing', version: '15', classifier: 'mac'
+    mac64 group: 'org.openjfx', name: 'javafx-base', version: '16', classifier: 'mac'
+    mac64 group: 'org.openjfx', name: 'javafx-controls', version: '16', classifier: 'mac'
+    mac64 group: 'org.openjfx', name: 'javafx-graphics', version: '16', classifier: 'mac'
+    mac64 group: 'org.openjfx', name: 'javafx-media', version: '16', classifier: 'mac'
+    mac64 group: 'org.openjfx', name: 'javafx-web', version: '16', classifier: 'mac'
+    mac64 group: 'org.openjfx', name: 'javafx-swing', version: '16', classifier: 'mac'
 
-    linux64 group: 'org.openjfx', name: 'javafx-base', version: '15', classifier: 'linux'
-    linux64 group: 'org.openjfx', name: 'javafx-controls', version: '15', classifier: 'linux'
-    linux64 group: 'org.openjfx', name: 'javafx-graphics', version: '15', classifier: 'linux'
-    linux64 group: 'org.openjfx', name: 'javafx-media', version: '15', classifier: 'linux'
-    linux64 group: 'org.openjfx', name: 'javafx-web', version: '15', classifier: 'linux'
-    linux64 group: 'org.openjfx', name: 'javafx-swing', version: '15', classifier: 'linux'
+    linux64 group: 'org.openjfx', name: 'javafx-base', version: '16', classifier: 'linux'
+    linux64 group: 'org.openjfx', name: 'javafx-controls', version: '16', classifier: 'linux'
+    linux64 group: 'org.openjfx', name: 'javafx-graphics', version: '16', classifier: 'linux'
+    linux64 group: 'org.openjfx', name: 'javafx-media', version: '16', classifier: 'linux'
+    linux64 group: 'org.openjfx', name: 'javafx-web', version: '16', classifier: 'linux'
+    linux64 group: 'org.openjfx', name: 'javafx-swing', version: '16', classifier: 'linux'
 }
 
 javafx {
-    version = "15"
+    version = "16"
     modules = [ 'javafx.web', 'javafx.swing' ]
     configuration = 'provided' // we provide natives during deployment or with SDK
 }
@@ -121,6 +120,8 @@ test {
     testLogging.showStandardStreams = true
     testLogging.exceptionFormat = 'full'
     maxHeapSize = "1024m"
+
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
 
 javadoc {
@@ -129,6 +130,8 @@ javadoc {
 }
 
 task runMCreator(type: JavaExec, dependsOn: jar) {
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+
     classpath += sourceSets.main.runtimeClasspath
     main = "net.mcreator.Launcher"
 
